--- a/weather_app/templates/weather_app/city_weather.html
+++ b/weather_app/templates/weather_app/city_weather.html
@@ -1,7 +1,9 @@
+{% if error is False %}
 <h3 class="text-3xl font-bold underline mb-6 self-center">weather data</h3>
+{% endif %}
 {% if weather_data %}
     <div class="self-center p-10 flex flex-col items-center">
-        <h1 class="text-2xl mb-6 underline">{{ weather_data.city }}</h1>
+        <h1 class="text-2xl mb-6 uppercase">{{ weather_data.city }}</h1>
         <h2>{{ weather_data.temperature }} Celsius</h2>
         <p class="my-4">{{ weather_data.description }}</p>
         <img src="http://openweathermap.org/img/w/{{ weather_data.icon }}.png" alt="{{weather_data.description}}"
@@ -22,3 +24,8 @@
         {% endfor %}
     </div>
 {% endif %} 
+{% if error %}
+    <div class="bg-red-300 rounded-xl py-3 px-6 self-center">
+        No city Found, please check the city name again ! 
+    </div>
+{% endif %}
