--- a/weather_app/templates/weather_app/city_weather.html
+++ b/weather_app/templates/weather_app/city_weather.html
@@ -2,12 +2,24 @@
 <h3 class="text-3xl font-bold underline mb-6 self-center">weather data</h3>
 {% endif %}
 {% if weather_data %}
-    <div class="self-center p-10 flex flex-col items-center">
+    <div class="self-center p-10 flex flex-col items-center w-full">
         <h1 class="text-2xl mb-6 uppercase">{{ weather_data.city }}</h1>
         <h2>{{ weather_data.temperature }} Celsius</h2>
         <p class="my-4">{{ weather_data.description }}</p>
-        <img src="http://openweathermap.org/img/w/{{ weather_data.icon }}.png" alt="{{weather_data.description}}"
-        width='60'>
+        <div class="flex justify-around items-center w-full">
+            <div class="flex items-center">
+                <i class="fa-solid fa-arrow-up"></i>
+                <i class="fa-solid fa-sun fa-lg" style="color: #eafb65"></i>
+                <p class="text-xl ml-2">{{ weather_data.sunrise }}</p>
+            </div>
+            <img src="http://openweathermap.org/img/w/{{ weather_data.icon }}.png" alt="{{weather_data.description}}"
+            width='60'>
+            <div class="flex items-center">
+                <i class="fa-solid fa-arrow-down"></i>
+                <i class="fa-solid fa-sun fa-lg" style="color: #eafb65"></i>
+                <p class="text-xl ml-2">{{ weather_data.sunset }}</p>
+            </div>
+        </div>
     </div>
 {% endif %}
 {% if forecast_data %}
